# goldi2

./: .devcontainer.json  .fdignore  .gitignore  .gitlab-ci.yml  .gitmodules  .jobs.yml  README.md  static.gitlab-ci.yml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  download_diamond.sh
.jona/: env
backend-services/: auth  booking  common  device  experiment  federation  gateway  openapi  update
clients/: api  soa  soa_services
common/web/: .eslintrc  .prettierrc
deployment/global/: docker-compose.yml
deployment/production/: docker-compose.yml
frontend-services/: update
frontend-services/apitool/: .gitignore  Dockerfile  build.js  default.conf.template  manifest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend-services/beast/: Dockerfile  README.md  build.js  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend-services/config-tool/: .gitignore  .prettierrc.js  README.md  eslintrc.js  index.html  package-lock.json  package.json  package.resolved.json  tailwind.config.js
frontend-services/edrys/: package.json  (+1 more)
hardware/: .gitlab-ci.yml  FPGA_CU_Documentation.docx  commit_message_format.md  general_conventions.md  project_organization.md
hardware/boards/axis_portal_v1/crosslab/: .gitignore  config.json  requirements.txt  setup.cfg
hardware/boards/axis_portal_v1/crosslab/src/axis_portal_v1_crosslab/: __main__.py  hal.py  model_logic.py
hardware/boards/axis_portal_v1/crosslab/src/three_axes_portal_crosslab/: __main__.py  hal.py
hardware/boards/axis_portal_v2/crosslab/: config.test  setup.cfg
hardware/boards/axis_portal_v2/crosslab/src/axis_portal_v1_crosslab/: __main__.py
hardware/boards/axis_portal_v2/crosslab/src/axis_portal_v2_crosslab/: Untitled-1.json  __main__.py  hal.py  model_logic.py
hardware/boards/thk/crosslab/: setup.cfg
hardware/boards/thk/crosslab/src/thk_crosslab/: __main__.py  curses_io.py
hardware/boards/three-axes-portal-v1/crosslab/: config.test  requirements.txt  setup.cfg
hardware/boards/three-axes-portal-v1/crosslab/src/three_axes_portal_v1_crosslab/: __main__.py  curses_io.py  hal.py
hardware/boards/warehouse_v2/crosslab/: requirements.txt  setup.cfg
hardware/boards/warehouse_v2/crosslab/src/warehouse_v2_crosslab/: __main__.py  hal.py  model_logic.py
hardware/common/board-test/: .gitignore  .npmrc  LICENSE  goldi-board-test  install.sh  meson.build  package-lock.json  package.json  tsconfig.json
hardware/common/board-test/jtag-over-svf/: package-lock.json  package.json  tsconfig.json
hardware/common/board-test/jtag-over-svf/src/: pinMappings.ts  svfGenerator.ts  testGenerator.ts  util.ts
hardware/common/board-test/jtag-over-svf/src/bsdl/atmega2560/: atmega2560.bsdl  bsdl-atmega2560.json
hardware/common/board-test/src/: index.ts
hardware/common/board-test/src/jtag-over-svf/: bsdl.ts  globals.ts  svfGenerator.ts  svf_output.json  testGenerator.ts  util.ts
hardware/common/board-test/src/jtag-over-svf/bsdl/atmega2560/: atmega2560.bsdl
hardware/common/board-test/src/jtag-over-svf/bsdl/machxo2/: bsdl-machxo2.json  machxo2.bsdl
hardware/common/board-test/src/jtag-over-svf/python-bsdl-parser/: parse.py
hardware/common/board-test/src/jtag-over-svf/src/: pinMappings.ts  svfGenerator.ts  testGenerator.ts  util.ts
hardware/common/board-test/src/jtag-over-svf/src/bsdl/atmega2560/: bsdl-atmega2560.json
hardware/common/board-test/src/svf-generator/: bsdl.ts  jtagOverSvfGenerator.ts  pinMappings.ts  testGenerator.ts
hardware/common/board-test/src/svf-generator/bsdl/atmega2560/: bsdl-atmega2560.json
hardware/common/board-test/src/svf-generator/bsdl/machxo2/: bsdl-machxo2.json
hardware/common/board-test/src/svf-generator/python-bsdl-parser/: README.md  bsdl2json.py
hardware/common/board-test/src/testcases/: index.ts  testcase.ts
hardware/common/board-test/src/testcases/ethernet_test/: index.ts
hardware/common/board-test/src/testcases/false_test/: index.ts
hardware/common/board-test/src/testcases/files/: example_config.json  programming_file.svf
hardware/common/board-test/src/testcases/fpga_clock_test/: index.ts
hardware/common/board-test/src/testcases/gpio_test/: index.ts
hardware/common/board-test/src/testcases/i2c_test/: index.ts
hardware/common/board-test/src/testcases/io_board_cable_test/: index.ts
hardware/common/board-test/src/testcases/io_board_configuration_test/: index.ts  testGenerator.ts
hardware/common/board-test/src/testcases/led_test/: index.ts
hardware/common/board-test/src/testcases/mc_gpio_test/: index.ts
hardware/common/board-test/src/testcases/programming_test_fpga/: index.ts  programming_file.svf
hardware/common/board-test/src/testcases/programming_test_microcontroller/: index.ts
hardware/common/board-test/src/testcases/rpi_gpio_test/: index.ts
hardware/common/board-test/src/testcases/spi_test/: index.ts
hardware/common/board-test/src/testcases/true_test/: index.ts
hardware/common/board-test/src/testcases/uart_test/: index.ts
hardware/common/board-test/src/testcases/usb_slave_test/: index.ts
hardware/common/board-test/src/util/: goldi-board-test-util.c  util.c
hardware/common/board-test/src/utils/: faultReport.ts  ioBoard.ts  types.ts  utilityFunctions.ts
hardware/common/svf-player/: .gitignore  meson.build  testfile
hardware/common/svf-player/grammars/: svf.l  svf.y
hardware/common/svf-player/src/: bcmGPIO.c  execute.c  execute.h  lexer.c  lexer.h  parser.c  parser.h  parser.output  svf_player.c  util.c  util.h
helper/: common-scripts  crosslab-development-container  crosslab-typescript-addon  openapi-codegeneration  openapi-codegeneration-v2  tsdoc-theme
scripts/: .find-files.sh  check_no_changes.sh  ci.d  ci.sh  ci_run_all.sh  clean_remote_cache.sh  customize_devcontainers.sh  deploy.sh  devcontainer_build-and-publish.sh  download_artifacts.sh  generate_gitlab_ci.py  generate_gitlab_ci.sh  generate_vscode_configs.sh  helper  helper.d  housekeeping  housekeeping.d  housekeeping.sh  pull_db.sh  run_local_crosslab.sh  upload_artifacts.sh  upload_badges.sh
(+2808 files in other folders)
