[metadata]
name = axis_portal_v1_crosslab
version = 0.0.1
author = Johannes Nau
author_email = johannes.nau@tu-ilmenau.de
description = The Crosslab Client Application for the three axes portal v1
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8, <3.11

install_requires =
    crosslab_api_client
    crosslab_soa_client
    spi_driver
    crosslab_soa_service_electrical
    crosslab_soa_service_webcam

[options.packages.find]
where = src

[options.package_data]
axis_portal_v1_crosslab = [py.typed]

[options.entry_points]
console_scripts =
    crosslab-axis_portal_v1 = axis_portal_v1_crosslab.__main__:main
